fix mobile safari z-index error

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -181,3 +181,7 @@ video {
 .css-151dxxb{
   background-color: transparent;
 }
+
+.css-jcszzj{
+  z-index: 999999;
+}
